--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,113 @@
 @import "tailwindcss";
 
+:root {
+    --primary: rgb(0 46 77);
+    --surface-tint: rgb(48 98 140);
+    --on-primary: rgb(255 255 255);
+    --primary-container: rgb(19 76 117);
+    --on-primary-container: rgb(255 255 255);
+    --secondary: rgb(0 49 62);
+    --on-secondary: rgb(255 255 255);
+    --secondary-container: rgb(0 80 100);
+    --on-secondary-container: rgb(255 255 255);
+    --tertiary: rgb(78 24 48);
+    --on-tertiary: rgb(255 255 255);
+    --tertiary-container: rgb(114 53 78);
+    --on-tertiary-container: rgb(255 255 255);
+    --error: rgb(96 0 4);
+    --on-error: rgb(255 255 255);
+    --error-container: rgb(152 0 10);
+    --on-error-container: rgb(255 255 255);
+    --background: rgb(247 249 255);
+    --on-background: rgb(24 28 32);
+    --surface: rgb(247 249 255);
+    --on-surface: rgb(0 0 0);
+    --surface-variant: rgb(222 227 235);
+    --on-surface-variant: rgb(0 0 0);
+    --outline: rgb(39 45 51);
+    --outline-variant: rgb(68 74 80);
+    --shadow: rgb(0 0 0);
+    --scrim: rgb(0 0 0);
+    --inverse-surface: rgb(45 49 53);
+    --inverse-on-surface: rgb(255 255 255);
+    --inverse-primary: rgb(155 203 251);
+    --primary-fixed: rgb(19 76 117);
+    --on-primary-fixed: rgb(255 255 255);
+    --primary-fixed-dim: rgb(0 53 87);
+    --on-primary-fixed-variant: rgb(255 255 255);
+    --secondary-fixed: rgb(0 80 100);
+    --on-secondary-fixed: rgb(255 255 255);
+    --secondary-fixed-dim: rgb(0 56 70);
+    --on-secondary-fixed-variant: rgb(255 255 255);
+    --tertiary-fixed: rgb(114 53 78);
+    --on-tertiary-fixed: rgb(255 255 255);
+    --tertiary-fixed-dim: rgb(86 31 55);
+    --on-tertiary-fixed-variant: rgb(255 255 255);
+    --surface-dim: rgb(182 185 190);
+    --surface-bright: rgb(247 249 255);
+    --surface-container-lowest: rgb(255 255 255);
+    --surface-container-low: rgb(239 241 246);
+    --surface-container: rgb(224 226 232);
+    --surface-container-high: rgb(210 212 218);
+    --surface-container-highest: rgb(196 198 204);
+}
+
+.dark {
+    --primary: rgb(231 241 255);
+    --surface-tint: rgb(155 203 251);
+    --on-primary: rgb(0 0 0);
+    --primary-container: rgb(152 199 247);
+    --on-primary-container: rgb(0 12 25);
+    --secondary: rgb(219 244 255);
+    --on-secondary: rgb(0 0 0);
+    --secondary-container: rgb(132 205 232);
+    --on-secondary-container: rgb(0 13 19);
+    --tertiary: rgb(255 235 240);
+    --on-tertiary: rgb(0 0 0);
+    --tertiary-container: rgb(252 171 200);
+    --on-tertiary-container: rgb(32 0 14);
+    --error: rgb(255 236 233);
+    --on-error: rgb(0 0 0);
+    --error-container: rgb(255 174 164);
+    --on-error-container: rgb(34 0 1);
+    --background: rgb(16 20 24);
+    --on-background: rgb(224 226 232);
+    --surface: rgb(16 20 24);
+    --on-surface: rgb(255 255 255);
+    --surface-variant: rgb(66 71 78);
+    --on-surface-variant: rgb(255 255 255);
+    --outline: rgb(236 240 248);
+    --outline-variant: rgb(190 195 203);
+    --shadow: rgb(0 0 0);
+    --scrim: rgb(0 0 0);
+    --inverse-surface: rgb(224 226 232);
+    --inverse-on-surface: rgb(0 0 0);
+    --inverse-primary: rgb(17 75 116);
+    --primary-fixed: rgb(206 229 255);
+    --on-primary-fixed: rgb(0 0 0);
+    --primary-fixed-dim: rgb(155 203 251);
+    --on-primary-fixed-variant: rgb(0 18 35);
+    --secondary-fixed: rgb(183 234 255);
+    --on-secondary-fixed: rgb(0 0 0);
+    --secondary-fixed-dim: rgb(136 209 236);
+    --on-secondary-fixed-variant: rgb(0 20 27);
+    --tertiary-fixed: rgb(255 217 228);
+    --on-tertiary-fixed: rgb(0 0 0);
+    --tertiary-fixed-dim: rgb(255 176 204);
+    --on-tertiary-fixed-variant: rgb(43 0 21);
+    --surface-dim: rgb(16 20 24);
+    --surface-bright: rgb(77 80 85);
+    --surface-container-lowest: rgb(0 0 0);
+    --surface-container-low: rgb(28 32 36);
+    --surface-container: rgb(45 49 53);
+    --surface-container-high: rgb(56 60 64);
+    --surface-container-highest: rgb(68 71 76);
+}
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    user-select: none;
+    background: var(--background);
+    color: var(--on-background);
 }
